# verby

./: AndroidManifest.xml  Cargo.toml  build.sh  index.html  linux-build.sh  verby-5fc2b2e2403bc37a.js  verby-5fc2b2e2403bc37a_bg.wasm  verby-desktop-4842adccd4cfd040.js  verby-desktop-4842adccd4cfd040_bg.wasm  wasm-bulid.sh
.cargo/: config.toml
assets/: sw.js
src/: app.rs  lib.rs  main.rs
