[package]
name = "verby"
version = "0.1.0"
authors = ["Sergey Kacheev <s.kacheev@gmail.com>"]
edition = "2021"
rust-version = "1.72"

# Rename the binary to avoid filename collision with lib
[[bin]]
name = "verby-desktop"
path = "src/main.rs"

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the wgpu rendering backend - better Wayland support than glow.
    "wayland",       # Enable native Wayland support
    "persistence",   # Enable restoring app state when restarting the app.
    "android-native-activity", # Enable Android support
] }
egui_extras = "0.31.1"
log = "0.4.27"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
winit = "0.30"
egui_keyboard = "0.2"

# native (desktop):
[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
env_logger = "0.11"
winit = "0.30"
egui_keyboard = "0.2"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
# egui_keyboard might not work properly on WASM, so we exclude it


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[package.metadata.android]
package = "org.egui.verby"
build_targets = [ "aarch64-linux-android" ]
large_heap = true

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 34

[lib]
# cdylib is required for Android, lib is required for desktop
crate-type = ["cdylib", "lib"]
